# wasmic

./: .env  .gitignore  .release-please-manifest.json  Cargo.toml  Justfile  README.md  config.yaml  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
docs/: development.md
src/: cli.rs  config.rs  error.rs  executor.rs  lib.rs  linker.rs  main.rs  mcp.rs  oci.rs  server.rs  state.rs  transform.rs  wasm.rs
src/utils/: mod.rs  transform.rs  wasm.rs
tests/: volume_mount_tests.rs
